tests/ltests/ui/generics/undeclared_type_parameter.l
struct S {
    t: T
}

fn main() -> int {
    0
}


